removed slash in img link

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </main>
     <section class="section--grid">
         <div class="grid-item">
-            <img src="/images/burger-delivery.jpg" alt="Juicy burger on a plate">
+            <img src="images/burger-delivery.jpg" alt="Juicy burger on a plate">
         </div>
         <div class="grid-item text">
             <h2 class="grid-item__title">Free delivery</h2>
@@ -70,10 +70,10 @@
             <a href="#" class="btn cta-grid">Order now</a>
         </div>
         <div class="grid-item favs">
-            <img src="/images/burgerfav.jpg" alt="juicy burgers">
+            <img src="images/burgerfav.jpg" alt="juicy burgers">
         </div>
         <div id="location" class="grid-item">
-            <img src="/images/restaurant.jpg" alt="picture of the restaurant">
+            <img src="images/restaurant.jpg" alt="picture of the restaurant">
         </div>
         <div class="grid-item text ">
             <h2 class="grid-item__title find">Find one in your neighborhood</h2>
@@ -106,7 +106,7 @@
     <section id="about" class="about-us">
         <h2 class="about__title">About us</h2>
         <div class="about-container">
-            <img class ="about-img"src="/images/burgershare.jpg" alt="Burger-world founders">
+            <img class ="about-img"src="images/burgershare.jpg" alt="Burger-world founders">
             <p class="about-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris id ornare risus. Mauris consequat odio vel fringilla sodales. Praesent ac rhoncus orci. Phasellus metus risus, elementum non enim rhoncus, feugiat ullamcorper eros. Etiam bibendum vehicula faucibus. Nullam luctus sagittis lorem vel maximus. Donec non ultricies ligula.
     
             </p>  
