fixed for smaller screen size

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>    
 
     <header>
-        <nav>
+        <nav class="nav">
             <a href="index.html"><img class ="logo" src="images/burgerlogo.png" alt="burger logo"></a>
             <button class="nav-toggle" aria-label="toggle-navigation">
                 <span class="hamburger"></span>
